@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/artsplugin-mpeglib-3.4.0_rc1.ebuild,v 1.1 2005/02/27 20:21:30 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/artsplugin-mpeglib/Attic/artsplugin-mpeglib-3.4.0_rc1.ebuild,v 1.2 2005/03/06 01:38:09 motaboy Exp $
 
 KMNAME=kdemultimedia
 KMMODULE=mpeglib_artsplug
@@ -11,7 +11,7 @@ inherit kde-meta eutils
 DESCRIPTION="mpeglib plugin for arts"
 KEYWORDS="~x86"
 IUSE=""
-DEPEND="$(deprange 3.4.0_beta2 $MAXKDEVER kde-base/mpeglib)"
+DEPEND="$(deprange $PV $MAXKDEVER kde-base/mpeglib)"
 OLDDEPEND="~kde-base/mpeglib-$PV"
 KMCOPYLIB="libmpeg mpeglib/lib/"
 KMEXTRACTONLY="mpeglib/"
