@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-meta/Attic/kdemultimedia-meta-3.4.0_rc1.ebuild,v 1.1 2005/02/27 20:21:34 danarmak Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdemultimedia-meta/Attic/kdemultimedia-meta-3.4.0_rc1.ebuild,v 1.2 2005/03/06 01:37:06 motaboy Exp $
 MAXKDEVER=$PV
 
 inherit kde-functions
@@ -30,4 +30,4 @@ RDEPEND="arts? ( $(deprange 3.4.0_beta2 $MAXKDEVER kde-base/artsplugin-audiofile
 	$(deprange $PV $MAXKDEVER kde-base/kmix)
 	$(deprange $PV $MAXKDEVER kde-base/kscd)
 	$(deprange $PV $MAXKDEVER kde-base/libkcddb)
-	$(deprange 3.4.0_beta2 $MAXKDEVER kde-base/mpeglib)"
+	$(deprange $PV $MAXKDEVER kde-base/mpeglib)"
